cluster/monitoring/alloy/resources/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alloy-http
  namespace: monitoring
spec:
  hostnames:
    - alloy.btkostner.network
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal-gateway
      namespace: networking
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: alloy
          port: 12345
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
